tests/tests/ui/invalid_integer_size_too_small.stderr
error: Invalid column type 'integer(1)' for field 'count: i32'
 --> tests/ui/invalid_integer_size_too_small.rs:9:5
  |
9 |     #[column(type = integer(1))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: i32 requires at least 4 bytes of storage
  = help: Valid storage types for i32: integer(4), integer(8)
